add Core data ok !

--- a/ToDoReminder/ToDoReminder/Main.storyboard
+++ b/ToDoReminder/ToDoReminder/Main.storyboard
@@ -8,7 +8,7 @@
         <!--ToDo-->
         <scene sceneID="9cZ-Jl-E19">
             <objects>
-                <tableViewController id="ywQ-XW-8px" sceneMemberID="viewController">
+                <tableViewController id="ywQ-XW-8px" customClass="ToDoController" customModule="ToDoReminder" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="3W9-bN-azA">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -59,28 +59,22 @@
                                 <rect key="frame" x="36" y="134" width="528" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="TitleListener:" destination="fcw-h2-GOu" eventType="editingDidEnd" id="tdj-gT-1k2"/>
-                                </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rhw-cc-nsW">
                                 <rect key="frame" x="36" y="235" width="528" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="TextListener:" destination="fcw-h2-GOu" eventType="editingDidEnd" id="IAC-NG-1fk"/>
-                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XBJ-83-3vT">
                                 <rect key="frame" x="36" y="194" width="31.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uD0-fB-xP5">
                                 <rect key="frame" x="36" y="94" width="32.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WFg-nn-Yeh">
@@ -94,7 +88,7 @@
                                         </constraints>
                                         <state key="normal" title="Save"/>
                                         <connections>
-                                            <action selector="SaveListener:" destination="fcw-h2-GOu" eventType="touchUpInside" id="G30-ol-D8V"/>
+                                            <action selector="saveListener:" destination="fcw-h2-GOu" eventType="touchUpInside" id="ruE-fj-bOU"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -125,9 +119,9 @@
                     </view>
                     <navigationItem key="navigationItem" title="Add" id="9ZY-o7-TJd"/>
                     <connections>
-                        <outlet property="SaveButton" destination="YXL-Vb-aBE" id="Vdg-pZ-PDu"/>
-                        <outlet property="TextField" destination="Rhw-cc-nsW" id="ZZZ-QK-VmJ"/>
-                        <outlet property="TitleField" destination="aNe-XX-SvX" id="NPa-W4-mey"/>
+                        <outlet property="saveButton" destination="YXL-Vb-aBE" id="DyN-ob-v7c"/>
+                        <outlet property="textField" destination="Rhw-cc-nsW" id="vNW-Ye-sup"/>
+                        <outlet property="titleField" destination="aNe-XX-SvX" id="oMo-jJ-lWa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L6b-gO-5E2" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -153,7 +147,7 @@
         <!--History-->
         <scene sceneID="abr-lw-6xg">
             <objects>
-                <tableViewController id="mNP-hA-iCB" sceneMemberID="viewController">
+                <tableViewController id="mNP-hA-iCB" customClass="HistoryController" customModule="ToDoReminder" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="C0V-I3-zUz">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -214,6 +208,6 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="vZa-IV-nhL"/>
-        <segue reference="IWd-go-mPD"/>
+        <segue reference="ShL-ev-ot7"/>
     </inferredMetricsTieBreakers>
 </document>
