--- a/ToDoReminder/ToDoReminder/Main.storyboard
+++ b/ToDoReminder/ToDoReminder/Main.storyboard
@@ -123,10 +123,10 @@
             </objects>
             <point key="canvasLocation" x="-45" y="311"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--ToDo-->
         <scene sceneID="r9N-9R-AuO">
             <objects>
-                <navigationController id="dQ8-23-Jiy" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="ToDo" title="ToDo" id="dQ8-23-Jiy" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="t6K-Iw-1Wf">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
